--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -1,3 +1,57 @@
-<p>
-  heroe works!
-</p>
+<h3>Héroe <small>nombre: </small></h3>
+<hr/>
+
+<div class="row">
+  <div class="col-md-12 text-right">
+    <button type="button" 
+            [routerLink]="['heroes']"
+            class="btn btn-outline-danger ">Volver</button>    
+  </div>
+</div>
+
+<div class="row animated fadeIn fast">
+  <div class="col-md-12">
+
+    <form (ngSubmit)="guardar()" #forma="ngForm">
+
+      <div class="form-group">
+        <label for="">Nombre</label>
+        <input [(ngModel)]="heroe.nombre"
+               name="nombre" 
+               type="text" 
+               value=""
+               class="form-control"
+               placeholder="Nombre del héroe"
+               required>
+      </div>
+      
+      <div class="form-group">
+        <label for="">Casa</label>
+        <select [(ngModel)]="heroe.casa"
+                name="casa"
+                class="form-control">
+          <option value="Marvel">Marvel</option>
+          <option value="DC">DC</option>          
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="">Bio</label>
+        <textarea [(ngModel)]="heroe.bio"
+                  name="bio" 
+                  type="text" 
+                  value=""
+                  class="form-control">
+        </textarea>
+      </div>
+
+      <div class="form-group">
+        <button [disabled]="!forma.valid"
+                type="submit" class="btn btn-primary">Guardar Cambios</button>
+      </div>
+ 
+      
+    </form>
+
+  </div>
+</div>
