Obteniendo los Heroes de Firebase (GET heroes)

--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -6,6 +6,10 @@
     <button type="button" 
             [routerLink]="['heroes']"
             class="btn btn-outline-danger ">Volver</button>    
+    <button type="button" 
+            (click)="agregarNuevo(forma)"
+            [routerLink]="['heroes']"
+            class="btn btn-outline-success">Nuevo Héroe</button>    
   </div>
 </div>
 
