--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -19,15 +19,26 @@
             <th>#</th>
             <th>Nombre</th>
             <th>Casa</th>
-            <th>OPciones</th>
+            <th>Opciones</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+          <tr *ngFor="let key of heroes | keys; let i = index" >
+            <th scope="row">{{ i + 1}}</th>
+            <td>{{heroes[key].nombre}}</td>
+            <td>{{heroes[key].casa}}</td>
+            <td>
+              <button [routerLink] = "['/heroe', key]"
+                      type="button"
+                      class="btn btn-outline-success btn-sm">
+                      Editar
+              </button>
+              <button (click)="borrarHeroe()"
+                      type="button"
+                      class="btn btn-outline-danger btn-sm">
+                      Eliminar
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
