--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -42,8 +42,11 @@
           </tr>
         </tbody>
       </table>
-      <div *ngIf="(heroes | keys).length === 0"  class="alert alert-info" role="alert">
+      <div *ngIf="(heroes | keys).length === 0 && !loading"  class="alert alert-info" role="alert">
         <strong>No existen</strong> registros que mostrar
+      </div>
+      <div *ngIf="loading"  class="alert alert-info" role="alert">
+        <strong>Cargando...</strong> por favor espere.
       </div>
     </div>
   </div>
